# myutils

./: .gitignore  README.md  docx2txt.py  id_file_versions.py  identify_versions.py  mailutil.py  myutils.py  parallel_commands  parameter_sweep  parameter_sweep_plot  pyproject.toml  rust_deps.py  sleep_until_modified.py  wake  wake.py  word2txt  word2txt.py  ytsplit.py
makepw/: makepw_strong.py  makepw_xkcd.py
makepw/old/: makepw_xkcd.py  mydict.txt  mydict2.txt  mydict3.txt
old/: discrete_rvs.py  ftp.py  heap.py  nytimes.py  opentabs.scpt  rstyle.py  sleep_until_modified.py  tree.py
param_sweep/: parameter_sweep.py  parameter_sweep_plot.py
shell_scripts/: parallel_commands.sh  sum_file_sizes.sh  sum_numbers.sh
